# BetCoin_Contracts

./: Anchor.toml  BetCoinIdl.cs
programs/bet-coin/: Cargo.toml
programs/bet-coin/src/: lib.rs
tests/: bet-coin.ts
